# excel-master

./: .env.example  .gitignore  Architecture.md  README.md  pyproject.toml  skills.md
data/: test_agent.csv
src/excelmaster/: __init__.py  config.py  models.py
src/excelmaster/agent/: __init__.py  llm_bridge.py  registry.py  session.py  tool_executor.py  tools.py
src/excelmaster/chat/: __init__.py  engine.py  layout.py  models.py  prompts.py  renderer.py
src/excelmaster/cli/: app.py
src/excelmaster/dashboard/: __init__.py  dashboard_engine.py  deep_analysis.py  llm_client.py  template_selector.py  themes.py  xl_chart.py  xl_dynamic.py  xl_style.py
src/excelmaster/dashboard/templates/: __init__.py  base_xl_template.py  dark_operational_xl.py  executive_xl.py  financial_xl.py  hr_xl.py  marketing_xl.py  minimal_clean_xl.py  supply_chain_xl.py
src/excelmaster/data/: data_engine.py
src/excelmaster/data/generators/: __init__.py  base.py  executive.py  extreme_load.py  feature_rich.py  finance.py  hr_admin.py  marketing.py  moderate.py  sparse.py  supply_chain.py
